--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "name": "Thin Ice",
   "short_name": "Thin Ice",
   "icons": [{
-    "src": "/mstile-150x150.png",
+    "src": "mstile-150x150.png",
       "sizes": "150x150",
       "type": "image/png"
     }],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#FFFFFF"
